force-app/main/default/objects/Subscription__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Existing global picklist.</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>