force-app/main/default/objects/Subscription__c/fields/Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Fee__c</fullName>
    <label>Cancellation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>