force-app/main/default/objects/Subscription__c/fields/Consumer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Consumer_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Consumer External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>