force-app/main/default/objects/Subscription__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id for the Subscription. This is the unique identifier for other systems to identify subscriptions for creation/update. A customer can have multiple subscriptions, therefore this CAN NOT be the Customer External Id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>