force-app/main/default/objects/Subscription__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description
  >If the End date is filled, the subscription is inactive. If the end date is not filled, the subscription is active.</description>
    <formula>IF( ISNULL(Subscription_End_Date__c) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>