force-app/main/default/objects/Subscription__c/fields/Subscription_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Cancellation_Date__c</fullName>
    <label>Subscription Cancellation Date</label>
    <type>Date</type>
</CustomField>