force-app/main/default/objects/Subscription__c/fields/Subscription_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Discount_Percentage__c</fullName>
    <label>Subscription Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>