force-app/main/default/objects/Subscription__c/fields/Subscription_Duration__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Duration__c</fullName>
    <label>Subscription Duration (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>