force-app/main/default/objects/Subscription__c/fields/Subscription_Machine_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Machine_Type__c</fullName>
    <label>Subscription Machine Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>