force-app/main/default/objects/Subscription__c/fields/Subscription_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order_Count__c</fullName>
    <description
  >Total Amount of Orders related to the subscription.</description>
    <label>Subscription Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>