force-app/main/default/objects/Subscription__c/fields/Subscription_Order_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order_Frequency__c</fullName>
    <label>Subscription Order Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>