force-app/main/default/objects/Subscription__c/fields/Subscription_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order_Value__c</fullName>
    <description>Total Value of all the Order Line items related to the order. The field ‘Paid Price inc VAT’ of the Order Item is used for Calculation.</description>
    <label>Subscription Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>