force-app/main/default/objects/Subscription__c/fields/Subscription_Order_Value_YTD__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Order_Value_YTD__c</fullName>
    <description
  >Total Value of all the Order Line items related to the order within the current Year. 

The field ‘Paid Price inc VAT’ of the Order Item is used.</description>
    <label>Subscription Order Value YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>