force-app/main/default/objects/Subscription__c/fields/Subscription_Plan__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Plan__c</fullName>
    <label>Subscription Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baseplan</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Premium Plus</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
                <isActive>false</isActive>
                <label>Large</label>
            </value>
            <value>
                <fullName>Small</fullName>
                <isActive>false</isActive>
                <label>Small</label>
            </value>
            <value>
                <fullName>TASSIMO Saver</fullName>
                <isActive>false</isActive>
                <label>TASSIMO Saver</label>
            </value>
            <value>
                <fullName>TASSIMO Starter</fullName>
                <isActive>false</isActive>
                <label>TASSIMO Starter</label>
            </value>
            <value>
                <fullName>TASSIMO Super Fan</fullName>
                <isActive>false</isActive>
                <label>TASSIMO Super Fan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>