force-app/main/default/objects/Subscription__c/fields/Subscription_Terms__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Terms__c</fullName>
    <label>Subscription Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>