force-app/main/default/objects/Subscription__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brewer Subscription</fullName>
            </value>
            <value>
                <fullName>Auto Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>