force-app/main/default/objects/Subscription__c/fields/Subscriptions_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Subscriptions_Cancellation_Reason__c</fullName>
    <label>Subscriptions Cancellation Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatically cancelled.</fullName>
            </value>
            <value>
                <fullName>Manually cancelled by customer.</fullName>
            </value>
            <value>
                <fullName>Manually cancelled by admin.</fullName>
            </value>
            <value>
                <fullName
        >I didn’t have enough space to store all the packs</fullName>
                <isActive>false</isActive>
                <label>I didn’t have enough space to store all the packs</label>
            </value>
            <value>
                <fullName>I don’t drink TASSIMO anymore</fullName>
                <isActive>false</isActive>
                <label>I don’t drink TASSIMO anymore</label>
            </value>
            <value>
                <fullName>I had issues with my deliveries</fullName>
                <isActive>false</isActive>
                <label>I had issues with my deliveries</label>
            </value>
            <value>
                <fullName>It was too much coffee</fullName>
                <isActive>false</isActive>
                <label>It was too much coffee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>