force-app/main/default/objects/Subscription__c/fields/Terms_Condition_Text__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition_Text__c</fullName>
    <description>Text of the T&amp;C accepted. Mapped from Boomi</description>
    <label>Terms &amp; Condition Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>