force-app/main/default/objects/Subscription__c/fields/Terms_Condition_Version__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition_Version__c</fullName>
    <description>Version of the T&amp;C accepted by Customer</description>
    <label>Terms &amp; Condition Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>